# google_adk

./: README.md  pyproject.toml
1 first_agent/first agent/: agent.py
10 parallel agents/: agent.py
10 parallel agents/agent_1/: agent.py
10 parallel agents/agent_2/: agent.py
10 parallel agents/agent_3/: agent.py
11 loop agents/: agent.py
11 loop agents/agent_1/: agent.py
11 loop agents/agent_2/: agent.py
2 tools_agent/tools agent/: agent.py
3 different models/lite_llm/: .env  agent.py
4 structured output/structured_output/: agent.py
5 session & states/: memory.py
5 session & states/session/: agent.py
6 storing in db/store_in_db/: agent.py
7 multi agent/multi_agents/: agent.py
7 multi agent/multi_agents/subagents/cricket_agent/: __init__.py  cricket_agent.py
7 multi agent/multi_agents/subagents/news_agent/: news_agent.py
7 multi agent/multi_agents/subagents/stock_agent/: __init__.py  stock_agent.py
8 callbacks/before_after_agent/: agent.py
8 callbacks/before_after_model/: agent.py
8 callbacks/before_after_tool/: agent.py
9 sequential agent/: agent.py
9 sequential agent/agent_1/: agent.py
9 sequential agent/agent_2/: agent.py
9 sequential agent/agent_3/: agent.py
first_agent/: .env  basic_agent.py
